<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="8dp">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_recent_reviews_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/recent_lung_analysis"
        android:textColor="#457B9D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RecyclerView for displaying history -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_reviews_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Empty State Image -->
    <ImageView
        android:id="@+id/iv_empty_state"
        android:layout_width="268dp"
        android:layout_height="283dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/lungs"
        android:contentDescription="@string/no_reviews"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_reviews_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Empty State Title -->
    <TextView
        android:id="@+id/tv_empty_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/it_s_quiet_here"
        android:textColor="#000"
        android:textSize="16sp"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/iv_empty_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Empty State Subtitle -->
    <TextView
        android:id="@+id/tv_empty_message_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/why_not_be_the_first_to_analyse"
        android:textColor="#666"
        android:textSize="14sp"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tv_empty_message_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
